refactor(backend): 将Java Records转换为传统类并降级至JDK 8兼容